more rf models and cleanup

--- a/formatting.ipynb
+++ b/formatting.ipynb
@@ -2995,8 +2995,7 @@
     }
    ],
    "source": [
-    "data = prep.copy()\n",
-    "data.head()"
+    "data = prep.copy()"
    ]
   },
   {
@@ -3088,16 +3087,10 @@
     "data['startYear'] = data['start'].apply(year_Grouping)\n",
     "data['startMonth'] = data['start'].apply(month_Grouping)\n",
     "data['startDay'] = data['start'].apply(day_Grouping)\n",
-    "#print(data['startYear'].unique())\n",
-    "print(data['startMonth'].unique())\n",
-    "print(data['startDay'].unique())\n",
     "        \n",
     "data['endYear'] = data['end'].apply(year_Grouping)\n",
     "data['endMonth'] = data['end'].apply(month_Grouping)\n",
-    "data['endDay'] = data['end'].apply(day_Grouping)\n",
-    "#print(data['endYear'].unique())\n",
-    "#print(data['endMonth'].unique())\n",
-    "#print(data['endDay'].unique())\n"
+    "data['endDay'] = data['end'].apply(day_Grouping)\n"
    ]
   },
   {
@@ -3118,6 +3111,7 @@
     }
    ],
    "source": [
+    "#if there is no start year, but an end year, then the start year is set to the end year\n",
     "for i in range(1,len(data)):\n",
     "    if data['startYear'].iloc[i] == 0 and data['startDay'].iloc[i] != 0:\n",
     "        data['startYear'].iloc[i] = data['endYear'].iloc[i]\n",
@@ -43149,7 +43143,7 @@
     }
    ],
    "source": [
-    "#print(data[['start','startYear', 'startMonth', 'startDay','end', 'endYear', 'endMonth', 'endDay']])\n",
+    "#original columns are dropped as they are no longer needed\n",
     "data.drop(['start', 'end'], axis=1, inplace=True)"
    ]
   },
@@ -43180,7 +43174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
