--- a/rebalancing.ipynb
+++ b/rebalancing.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Rebalancing\n",
     "\n",
-    "- using different algorithms to rebalance our data\n",
-    "- .csv- files are only to be used if whole dataset is to be implemented without split"
+    "In this notebook we focus on rebalancing our data, as it is very imbalanced originally. First, we used RandomOverSampler, which randomly copies instances. Then we also used the SMOTE-algorithm, which fabricates new instances that are close to other instances in the dataset.\n",
+    "In the end, new .cvs-files were created to include the rebalanced data to be used in other notebooks."
    ]
   },
   {
@@ -73,7 +73,6 @@
    ],
    "source": [
     "data = train_prep.copy()\n",
-    "print(data.shape)\n",
     "x = data.drop(['type'], axis=1)"
    ]
   },
@@ -96,6 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#function to have resamplers resample to specific number of samples per class\n",
     "def strat(data):\n",
     "    b = Counter(y).values()\n",
     "    a = Counter(y).keys()\n",
@@ -7342,12 +7342,10 @@
     "\n",
     "ros = RandomOverSampler(sampling_strategy=strat(y), random_state=1)\n",
     "X_res, y_res = ros.fit_resample(x, y)\n",
-    "print((Counter(y_res).items()))\n",
     "\n",
     "dataROS = X_res.copy()\n",
     "dataROS['type'] = y_res\n",
-    "print (dataROS.shape)\n",
-    "dataROS.head()\n",
+    "\n",
     "\n"
    ]
   },
@@ -7382,12 +7380,10 @@
     }
    ],
    "source": [
-    "from imblearn.over_sampling import SMOTE, ADASYN\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "X_resSMOTE, y_resSMOTE = SMOTE(sampling_strategy=strat(y), random_state=1).fit_resample(x, y)\n",
-    "print((Counter(y_resSMOTE).items()))\n",
     "dataSMOTE = X_resSMOTE.copy()\n",
-    "dataSMOTE['type'] = y_resSMOTE\n",
-    "print (dataSMOTE.shape)\n"
+    "dataSMOTE['type'] = y_resSMOTE\n"
    ]
   },
   {
@@ -7398,38 +7394,6 @@
    "source": [
     "\n",
     "dataSMOTE.to_csv('data/train_prepSMOTE100.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ADASYN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "No samples will be generated with the provided ratio settings.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m X_resADASYN, y_resADASYN \u001b[39m=\u001b[39m ADASYN(sampling_strategy\u001b[39m=\u001b[39;49mstrat(y), random_state\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, n_neighbors\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m)\u001b[39m.\u001b[39;49mfit_resample(x, y)\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m((Counter(y_resADASYN)\u001b[39m.\u001b[39mitems()))\n",
-      "File \u001b[1;32mc:\\Users\\flori\\miniconda3\\lib\\site-packages\\imblearn\\base.py:83\u001b[0m, in \u001b[0;36mSamplerMixin.fit_resample\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m     77\u001b[0m X, y, binarize_y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_X_y(X, y)\n\u001b[0;32m     79\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msampling_strategy_ \u001b[39m=\u001b[39m check_sampling_strategy(\n\u001b[0;32m     80\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msampling_strategy, y, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampling_type\n\u001b[0;32m     81\u001b[0m )\n\u001b[1;32m---> 83\u001b[0m output \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_fit_resample(X, y)\n\u001b[0;32m     85\u001b[0m y_ \u001b[39m=\u001b[39m (\n\u001b[0;32m     86\u001b[0m     label_binarize(output[\u001b[39m1\u001b[39m], classes\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39munique(y)) \u001b[39mif\u001b[39;00m binarize_y \u001b[39melse\u001b[39;00m output[\u001b[39m1\u001b[39m]\n\u001b[0;32m     87\u001b[0m )\n\u001b[0;32m     89\u001b[0m X_, y_ \u001b[39m=\u001b[39m arrays_transformer\u001b[39m.\u001b[39mtransform(output[\u001b[39m0\u001b[39m], y_)\n",
-      "File \u001b[1;32mc:\\Users\\flori\\miniconda3\\lib\\site-packages\\imblearn\\over_sampling\\_adasyn.py:162\u001b[0m, in \u001b[0;36mADASYN._fit_resample\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    160\u001b[0m n_samples \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msum(n_samples_generate)\n\u001b[0;32m    161\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m n_samples:\n\u001b[1;32m--> 162\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    163\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mNo samples will be generated with the provided ratio settings.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    164\u001b[0m     )\n\u001b[0;32m    166\u001b[0m \u001b[39m# the nearest neighbors need to be fitted only on the current class\u001b[39;00m\n\u001b[0;32m    167\u001b[0m \u001b[39m# to find the class NN to generate new samples\u001b[39;00m\n\u001b[0;32m    168\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnn_\u001b[39m.\u001b[39mfit(X_class)\n",
-      "\u001b[1;31mValueError\u001b[0m: No samples will be generated with the provided ratio settings."
-     ]
-    }
-   ],
-   "source": [
-    "#X_resADASYN, y_resADASYN = ADASYN(sampling_strategy=strat(y), random_state=1, n_neighbors=3).fit_resample(x, y)\n",
-    "#print((Counter(y_resADASYN).items()))\n",
-    "#data.to_csv('data/train_prepADASYN.csv')\n"
    ]
   }
  ],
@@ -7449,7 +7413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
