--- a/xgboost_tries_balanced.ipynb
+++ b/xgboost_tries_balanced.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,21 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataSMOTE = train_prep.copy()\n",
-    "\n",
-    "#needed when using balanced dataset\n",
-    "#dataSMOTE.drop(columns=['Unnamed: 0'], inplace=True, axis = 1)\n",
-    "\n",
-    "#dataSMOTE.dtypes\n"
+    "dataSMOTE = train_prep.copy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,58 +107,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_values([2596, 563, 157, 1564, 582, 423, 133, 523, 552, 350, 303, 64, 65, 132, 147, 75, 389, 51, 21, 73, 7, 111, 8, 18, 32, 137, 30, 43, 75, 133, 35, 11, 21, 9, 14, 34, 54, 13, 25, 7, 18, 17, 27, 12, 19, 15, 15, 10, 9, 14, 18, 25, 7, 7, 7])\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(featuresSMOTE, labelsSMOTE, test_size=0.3, random_state=2)\n",
-    "#X_train.tail()\n",
-    "print(Counter(y_train).values())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import Counter\n",
     "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(featuresSMOTE, labelsSMOTE, test_size=0.3, random_state=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "def strat(data):\n",
-    "    b = Counter(y).values()\n",
-    "    a = Counter(y).keys()\n",
+    "    b = Counter(data).values()\n",
+    "    a = Counter(data).keys()\n",
     "    a = list(a)\n",
     "    b = list(b)\n",
-    "    print(dict(zip(a, b)))\n",
     "\n",
     "    for i in range(len(a)):\n",
-    "        if b[i] < 250 :\n",
-    "            b[i] = 250\n",
-    "    print(dict(zip(a, b)))\n",
+    "        if b[i] < 100 :\n",
+    "            b[i] = 100\n",
     "    return dict(zip(a, b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{29: 88, 36: 3747, 37: 2201, 22: 631, 8: 192, 21: 43, 45: 189, 30: 210, 50: 61, 1: 789, 4: 528, 41: 771, 42: 156, 48: 196, 43: 774, 11: 837, 2: 74, 26: 479, 14: 450, 6: 37, 18: 225, 54: 70, 27: 63, 33: 16, 51: 107, 19: 93, 34: 11, 35: 23, 28: 16, 25: 104, 0: 25, 9: 23, 12: 187, 38: 45, 39: 40, 16: 49, 10: 17, 23: 32, 5: 44, 53: 13, 3: 11, 32: 95, 13: 26, 31: 29, 24: 11, 46: 15, 44: 21, 47: 27, 52: 20, 7: 10, 49: 16, 17: 16, 20: 18, 15: 7, 40: 22}\n",
-      "{29: 250, 36: 3747, 37: 2201, 22: 631, 8: 250, 21: 250, 45: 250, 30: 250, 50: 250, 1: 789, 4: 528, 41: 771, 42: 250, 48: 250, 43: 774, 11: 837, 2: 250, 26: 479, 14: 450, 6: 250, 18: 250, 54: 250, 27: 250, 33: 250, 51: 250, 19: 250, 34: 250, 35: 250, 28: 250, 25: 250, 0: 250, 9: 250, 12: 250, 38: 250, 39: 250, 16: 250, 10: 250, 23: 250, 5: 250, 53: 250, 3: 250, 32: 250, 13: 250, 31: 250, 24: 250, 46: 250, 44: 250, 47: 250, 52: 250, 7: 250, 49: 250, 17: 250, 20: 250, 15: 250, 40: 250}\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -171,27 +147,18 @@
       "c:\\Users\\flori\\miniconda3\\lib\\site-packages\\imblearn\\utils\\_validation.py:299: UserWarning: After over-sampling, the number of samples (3747) in class 36 will be larger than the number of samples in the majority class (class #36 -> 2596)\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(22457, 808)\n"
-     ]
     }
    ],
    "source": [
     "from imblearn.over_sampling import SMOTE, ADASYN\n",
     "X_resSMOTE, y_resSMOTE = SMOTE(sampling_strategy=strat(y_train), random_state=1).fit_resample(X_train, y_train)\n",
-    "#print((Counter(y_resSMOTE).items()))\n",
     "dataSMOTE = X_resSMOTE.copy()\n",
-    "dataSMOTE['type'] = y_resSMOTE\n",
-    "print (dataSMOTE.shape)"
+    "dataSMOTE['type'] = y_resSMOTE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,16 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8911904761904762"
+       "0.895"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8824,11 +8791,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bst.save_model('models/xg/xgboost_full_SMOTE.json')"
+    "bst.save_model('models/xg/xgboost_0.3_SMOTE100_for_comparison.json')"
    ]
   },
   {
@@ -8931,7 +8898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
