--- a/formatting2.ipynb
+++ b/formatting2.ipynb
@@ -1,12 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO\n",
-    "\n",
-    "- add event_type to text features"
+    "in this notebook, brackets are removed from the column \"event_type\". Also, a regular expression found in a value was removed."
    ]
   },
   {
@@ -3000,199 +2999,7 @@
     }
    ],
    "source": [
-    "data = prep.copy()\n",
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['festivals', 'filmmaking and photography', nan, 'theater',\n",
-       "       'finance', 'theater activity', 'portraiture', 'music',\n",
-       "       'shooting exercises', 'preparation', 'societies',\n",
-       "       'religion and beliefs', 'culture', 'theater history',\n",
-       "       'concert trips/tours', 'copying (making)', 'labor movement',\n",
-       "       'theater performances', 'poetry', 'printing/ publishing',\n",
-       "       'caricatures', 'catering service', 'composing', 'landscapes',\n",
-       "       'army', 'photography', 'correspondence', 'sports',\n",
-       "       'making music and singing', '<making/originating>', 'printing',\n",
-       "       'taking pictures', 'portrait of a man', 'industry', 'playwriting',\n",
-       "       'wood and paper industry', 'lyrics', 'documentation',\n",
-       "       'Agriculture', 'concerts', 'doing choral singing',\n",
-       "       'music, theater, dance', 'state and society', 'street',\n",
-       "       'club activities', 'tourism', 'city \\u200b\\u200blife',\n",
-       "       'art criticism', 'women', 'fiction', 'metal art',\n",
-       "       'lifestyle/living situation', 'anniversary birthdays',\n",
-       "       'photos (works)', 'graphics (visual arts)', 'cultural history',\n",
-       "       'defense buildings/facilities', 'military and defense',\n",
-       "       'art exhibitions', 'personal and family life', 'singing parties',\n",
-       "       'word plays', 'museum work', 'cooking', 'economy', 'bombing',\n",
-       "       'military action', 'museums', 'anatomy', 'music history',\n",
-       "       'pedagogy', 'imprisonment', 'biographies',\n",
-       "       'There is no KVIS event', 'theater awards', 'excursions', 'ships',\n",
-       "       'films (works)', 'folk clothes', 'settlements', 'elections',\n",
-       "       'glass art', 'metal industry', 'making musical instruments',\n",
-       "       'sculpture (fine art)', 'numismatics', 'cities', 'grief',\n",
-       "       'industrial production', 'writing', 'appearances', 'politics',\n",
-       "       'collection activities of the museum', 'trade', 'dance parties',\n",
-       "       'food trade', 'instrumental music', 'expeditions', 'drafting',\n",
-       "       'processions', 'jazz music', 'exhibition', 'foreign Estonians',\n",
-       "       'higher education', 'parliaments', 'kindergartens',\n",
-       "       'insurance (finance)', 'art/architecture', 'death', 'churches',\n",
-       "       'hills/elevations', 'wars', 'clay works',\n",
-       "       'archaeological excavation', 'deep music', 'merchants association',\n",
-       "       'the press', 'funeral', 'arrangement', 'acts', 'military ranks',\n",
-       "       'coup attempts', 'making by hand', '<CLOTHING AND ACCESSORIES>',\n",
-       "       'hiking', 'revolution', 'study materials', 'rest/ free time',\n",
-       "       'furniture industry', 'festive receptions', 'literature',\n",
-       "       'election campaigns', 'education', 'film production',\n",
-       "       'artisan associations', 'rail transport', 'wedding',\n",
-       "       'dance history', 'theater education', 'manor buildings',\n",
-       "       'educational institutions', 'ethnology', 'drawing',\n",
-       "       'music festivals', 'working', 'male choirs', 'singers',\n",
-       "       'musicology', 'travelling', 'furnishing/furnishing',\n",
-       "       'square/square', 'trade unions', 'portrait of the ruler', 'ballet',\n",
-       "       'knowledge control', 'birthdays', \"women's clothing\",\n",
-       "       'buying/selling', 'new year/ gums', 'music education', 'operas',\n",
-       "       'postal and telegraph service', 'memorial exhibitions',\n",
-       "       'entrepreneurship', 'marshal', 'archaeology', 'collecting/finding',\n",
-       "       'music theory', 'roads', 'foods', 'mixed choirs', 'celebrations',\n",
-       "       'schoolhours', 'awarding', 'fair/market trade', 'war memorials',\n",
-       "       'family', '<collection activity>', 'history', 'solo song',\n",
-       "       'police service', 'chess', 'group portrait', 'sanatoriums',\n",
-       "       'puppet theater', 'archaeological tombs', 'operettas',\n",
-       "       'folk music groups', 'tram traffic', 'vocal music',\n",
-       "       'legislature/representative assemblies', 'attractions',\n",
-       "       'theater science', 'civil defense', 'trial', 'student life',\n",
-       "       'dairy industry', 'literary history', 'symphony orchestras',\n",
-       "       'economic statistics', 'banks/ledges', 'student organizations',\n",
-       "       'school life', 'military units', 'teaching', 'information storage',\n",
-       "       'production processes', 'advertising', 'marriage', 'Christianity',\n",
-       "       'telegraph', \"women's movements\", 'reference literature',\n",
-       "       'science', 'botany', 'beaches/coasts', 'road construction',\n",
-       "       'female choirs', 'castles/palaces', 'municipalities/magistrates',\n",
-       "       'feature films', 'folk dance', 'commemoration',\n",
-       "       'song and dance parties', 'giving away', 'architecture',\n",
-       "       'still life', 'Masses', 'propaganda/campaign', 'grave markers',\n",
-       "       'ballet performances',\n",
-       "       '<containers related to smoking and tobacco use>', 'monasteries',\n",
-       "       'meeting', 'TV theaters', 'landscape architecture', 'restaurants',\n",
-       "       'foreign tourism', 'sailing', 'dressing and accessories',\n",
-       "       'guest performances', 'archaeological excavations', 'psychology',\n",
-       "       'high jump', 'dancing', 'philology', 'jewelry', 'winter',\n",
-       "       'National defence', 'manuscript preparation', 'theater criticism',\n",
-       "       \"children's literature\", 'telephone communication',\n",
-       "       'collective farms/cooperatives', 'communist labor movement',\n",
-       "       'Easter', 'sailing ships', 'fortresses', 'ready',\n",
-       "       'competitions - inspections', 'floriculture', 'farm buildings',\n",
-       "       'hotels/inns', 'trading/shop', 'birthday', 'adornment',\n",
-       "       'memorials/monuments', 'school activities',\n",
-       "       'written creation and oral tradition', 'Labor Day (May 1)',\n",
-       "       'industrial buildings', 'portrait of a woman',\n",
-       "       'national military units', 'phaleristics', 'conferences/seminars',\n",
-       "       'establishing peace', 'history of education', 'publishing',\n",
-       "       'Baltic Germans', 'social processes', 'filming',\n",
-       "       'trade regulation', 'studio photos', 'party/gathering', 'musicals',\n",
-       "       'interior textiles', 'film history', '<household container>',\n",
-       "       'gatherings', 'financial operations/accounting', 'variety show',\n",
-       "       'fencing', 'economic history', 'political youth organizations',\n",
-       "       'literary competitions', 'social and associational activities',\n",
-       "       'cafes', 'Lutheranism', 'health',\n",
-       "       'industrial and agricultural exhibition', 'glass industry',\n",
-       "       'medical history', 'holidays and anniversaries', 'entertainment',\n",
-       "       'journalism history', 'visual arts', \"children's clothing\",\n",
-       "       'residential buildings', 'villas/mansions', 'cultural days',\n",
-       "       'planned economy', 'farming', 'cemeteries', 'aviation',\n",
-       "       'swamps/bogs', 'theater festivals', 'apartment buildings',\n",
-       "       'history of photography', 'applied art', 'urban construction',\n",
-       "       'light industry', 'skating', 'architectural history',\n",
-       "       'anniversary', 'nature conservation', 'animals', 'TV production',\n",
-       "       'playing', 'portrait of a child', 'lighthouses', 'career',\n",
-       "       'friendship', 'ruins', 'historical novels', 'Christmas',\n",
-       "       'act (in a work of art)', 'port/place of landing',\n",
-       "       'slaughterhouses', 'land reforms', 'commercial films',\n",
-       "       'war museums', 'symbolism', 'youth literature',\n",
-       "       'construction activity', 'conducting', 'pastime literature',\n",
-       "       'memories', 'school buildings', 'movie actors', 'military history',\n",
-       "       'traditional/folk music', 'skiing', 'fashion art', 'parades',\n",
-       "       'railway stations', 'popular music', 'Lakes', 'radio theaters',\n",
-       "       'religious activity', 'bridges/bridges', 'making preserves',\n",
-       "       'nature', 'religion and related disciplines',\n",
-       "       'cultural/folk/society houses', 'folk/reggae songs', 'smoking',\n",
-       "       'self portrait', 'manners of congratulation', 'the circus',\n",
-       "       'villages', 'painting', 'model building',\n",
-       "       'restoration (construction)', 'military hospitals', 'children',\n",
-       "       'housewives', 'travel albums/diaries', 'fire service', 'cinemas',\n",
-       "       'ethnography', 'valleys/cousins', 'bullet thrust', 'language',\n",
-       "       'war economy', 'polar exploration', 'art history', 'football',\n",
-       "       'sports management', 'channels', 'youth work',\n",
-       "       'cultural journalism', 'military service', 'concert acts',\n",
-       "       'music reviews', 'health and medicine', 'music organizations',\n",
-       "       'restoration work', 'holidays related to professions',\n",
-       "       'book graphics', 'literary places',\n",
-       "       '<covering and hanging furnishings>', 'youth organizations',\n",
-       "       'military territories', 'home study', 'ethnographic museums',\n",
-       "       'agriculture/crop production', 'printing industry',\n",
-       "       'parks/green areas', 'fountains', 'rationalization',\n",
-       "       'history of philosophy', 'a gift', 'pioneers',\n",
-       "       'archives/archiving', 'ceramics (applied art)', 'medicine',\n",
-       "       'power plants', 'role portrait', 'going to the sauna',\n",
-       "       'raising/lowering the flag', 'forest rafting', 'born',\n",
-       "       'conservation/restoration', 'natural economy', 'washing (hygiene)',\n",
-       "       'car transport', 'summer days', 'peat industry',\n",
-       "       'temperance movement', 'buildings', 'mythology',\n",
-       "       'funeral supplies', 'repression',\n",
-       "       'bakery and confectionery industry', 'town halls', 'folklore',\n",
-       "       'personal hygiene and care', 'graves', 'The public sector',\n",
-       "       'social distribution/ classes', 'family portrait',\n",
-       "       'secondary education', 'party activity', 'navy',\n",
-       "       'crafts and home industry', 'epigraphy', 'boats', 'church music',\n",
-       "       'wedding anniversary', 'demonstrations', 'orphanages',\n",
-       "       'technical press', 'novels', 'military organizations', 'transport',\n",
-       "       'film screenwriting', 'riots/uprisings', 'siblings',\n",
-       "       'decorative arts', 'humor/satire', 'military training',\n",
-       "       'broadcasting', 'the olympic games', 'childhood', 'learning',\n",
-       "       'mechanical engineering', 'literary criticism', 'cement industry',\n",
-       "       \"women's gymnastics\", 'transport organizations', 'photojournalism',\n",
-       "       'sports facilities', 'general', 'care of the sick',\n",
-       "       'sound recording', 'forms of study', 'flour/meal industry',\n",
-       "       'battles', 'dairy foods', 'cartography', 'animal husbandry',\n",
-       "       'tank force', 'administration', 'philately', 'harbor bridges',\n",
-       "       'history of science', 'taverns', 'philosophy', 'death anniversary',\n",
-       "       'water transport', 'geography', 'car rally', 'Orthodox', 'balls',\n",
-       "       'fisheries and fishing', 'practices/customs',\n",
-       "       'educational buildings', 'joint action', 'militia service',\n",
-       "       'rescue work', 'Congress', 'ancient egyptian mythology',\n",
-       "       'law and justice', 'leather art', 'music genres',\n",
-       "       'guerilla warfare', 'musicians', 'recreational theaters',\n",
-       "       'chemical industry', 'fashion (clothing)', \"children's plays\",\n",
-       "       'steamships', 'oil shale industry', 'entertainment events',\n",
-       "       'pharmacies', 'fisheries management', 'tools/tools', 'charity',\n",
-       "       \"coups d'état\", 'mining of mineral resources',\n",
-       "       'textile and sewing industry', 'sports competitions', 'islanders',\n",
-       "       'machine tractor stations', 'war of siege', 'hospitals',\n",
-       "       'economics', 'weapons', 'scouting', 'shaving',\n",
-       "       'wartime regulations', 'singing stages', 'short stories',\n",
-       "       'minorities', 'television journalism', 'housekeeping',\n",
-       "       '<soft interior>', 'rebuilding (construction work)', 'tributes',\n",
-       "       'archery', 'new ones', 'faith/religion education', 'self-activity',\n",
-       "       'engagement and marriage', 'church history', 'egg production',\n",
-       "       'fish foods', 'music competitions', 'jewelry art', 'employees',\n",
-       "       'photo exhibitions', 'music museums'], dtype=object)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['event_type'].unique()"
+    "data = prep.copy()"
    ]
   },
   {
@@ -3390,8 +3197,7 @@
     "        x = x.replace('\\u200b', '')\n",
     "    return x\n",
     "\n",
-    "data['event_type'] = data['event_type'].apply(strip_brackets)\n",
-    "data['event_type'].unique()"
+    "data['event_type'] = data['event_type'].apply(strip_brackets)"
    ]
   },
   {
@@ -3421,7 +3227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
