--- a/hot_encoding_prep.ipynb
+++ b/hot_encoding_prep.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c29d7dcc",
+   "metadata": {},
+   "source": [
+    "# Hot Encoding "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e44d3a2b",
+   "metadata": {},
+   "source": [
+    "This notebook is used to hot encode our text based categorical features.<br>\n",
+    "This notebook also includes data minipulation needed before the hot encoding is applied:\n",
+    "- For some features such as colour, entries are grouped into larger more useful groups\n",
+    "- Some features have been thresholded so that we can limit the number of additional hot encoded columns \n",
+    "\n",
+    "This notebook also includes a section for adjusting the thresholds at a later date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ad829956",
    "metadata": {},
    "source": [
@@ -16,34 +37,7 @@
    "outputs": [],
    "source": [
     "# Imports\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "import re \n",
-    "from math import isnan\n",
-    "\n",
-    "pd.set_option(\"display.max_columns\", None)\n",
-    "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_seq_items', None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7b28fe3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dtype={'type': str} prevents being confused with data type for large data sets\n",
-    "train = pd.read_csv('data/train.csv', index_col='id', dtype={'type': str})\n",
-    "test = pd.read_csv('data/test.csv', index_col='id', dtype={'type': str})\n",
-    "train_translated = pd.read_csv('data/train_translated.csv', dtype={'type': str})\n",
-    "test_translated = pd.read_csv('data/test_translated.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data = pd.read_csv('data/combined_data.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data_translated = pd.read_csv('data/combined_data_translated.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})\n",
-    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})"
+    "from setup_general import *"
    ]
   },
   {
@@ -70,7 +64,7 @@
     "- class\n",
     "- is_orginal\n",
     "\n",
-    "Extra\n",
+    "Additionally \n",
     "- country \n",
     "- city_municipality \n",
     "- event_type \n",
@@ -2951,7 +2945,7 @@
    "id": "a2ef2d91",
    "metadata": {},
    "source": [
-    "Check the attrubuites"
+    "### Checking and understanding the attrubuites"
    ]
   },
   {
@@ -3298,7 +3292,7 @@
    ],
    "source": [
     "data['city_municipality'].value_counts()\n",
-    "#Similar to country - maybe set thresehold to 5 - could up to 10\n",
+    "#Similar to country \n",
     "# 48 . with value_counts between 2 - 9 + alot of unique values \n",
     "#Threshold set to 2"
    ]
@@ -3875,7 +3869,7 @@
     "data['event_type'].value_counts()\n",
     "#Very discriptive feature! - gives a lot of clues to the type\n",
     "#There are a lot of types - 551 so will need to set a sensible threshold!\n",
-    "#Maybe a threshold of around 30? - set at 20 for now!\n",
+    "#Maybe a threshold of around 30?\n",
     "#Set to 10 for now\n"
    ]
   },
@@ -12675,10 +12669,10 @@
    "metadata": {},
    "source": [
     "Define a function that:\n",
-    "- goes throught the value_counts and selects all the values below the threshold\n",
-    "- labels these as 'rare and groups these together\n",
+    "- goes through the value_counts and selects all the values below the threshold\n",
+    "- labels these as 'below_tres' and groups these together\n",
     "\n",
-    "So that during the hot_encoding we only have columns for values that appear at least 2/threshold"
+    "So that during the hot_encoding we only have columns for values that appear at least as often as the threshold"
    ]
   },
   {
@@ -13263,6 +13257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#For columns without thresholding\n",
     "columns = ['state', 'collection_mark', 'color', 'museum_abbr', 'class', 'is_original', 'musealia_mark', 'before_Christ']\n",
     "data_dum = pd.get_dummies(data, columns = columns)"
    ]
@@ -16808,6 +16803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#For columns with thresholding\n",
     "thres_columns = ['musealia_additional_nr', 'country', 'city_municipality', 'event_type', 'participants_role', 'parish', 'collection_additional_nr', 'damages', 'participant', 'location']\n",
     "data_dum = pd.get_dummies(data_dum, columns = thres_columns)"
    ]
@@ -29887,6 +29883,7 @@
     }
    ],
    "source": [
+    "#check\n",
     "data2 = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})"
    ]
   },
@@ -30484,6 +30481,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "079ed238",
+   "metadata": {},
+   "source": [
+    "Used for adjusting the thresholds after the hot encoding has already occured"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af4529e4",
    "metadata": {},
    "source": [
@@ -30538,6 +30543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#make copies of needed data\n",
     "data = prep.copy()\n",
     "org_data = combined_data_fully_translated.copy()"
    ]
@@ -30614,6 +30620,7 @@
     }
    ],
    "source": [
+    "#apply new threshols\n",
     "data = re_threshold(data, org_data, 'event_type', 30)\n",
     "data = re_threshold(data, org_data, 'location', 20)\n",
     "data = re_threshold(data, org_data, 'collection_additional_nr', 30)\n",
@@ -30710,6 +30717,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#re run hot encoding\n",
     "thres_columns = ['musealia_additional_nr', 'event_type', 'participants_role', 'collection_additional_nr', 'damages', 'participant', 'location', 'material', 'technique']\n",
     "data_dum = pd.get_dummies(data, columns = thres_columns)"
    ]
