--- a/voter.ipynb
+++ b/voter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,35 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# categorize and resort types\n",
-    "types = [\n",
-    "'sculpture',\\\n",
-    "'bag', 'suit', 'doll', 'sheet/linen', 'dish/vessel','jewel', 'tape/ribbon',\\\n",
-    "'country',\\\n",
-    "'paper','book','magazines', 'album', 'newspaper', 'folder/booklet',\\\n",
-    "'invitation',  'calendar',\\\n",
-    "'audio recording', 'telegram',\\\n",
-    "'packaging', 'crate/box',\\\n",
-    "'printed notes', 'small print',\\\n",
-    "'seal', 'seal/imprint',\\\n",
-    "'letter','letter of honor/honorary address',\\\n",
-    "'postcard', 'photo, postcard', 'letter, postcard',\\\n",
-    "'manuscript','script, song/vocal music', 'music sheet', 'musical instrument', 'manuscript, musical composition', 'manuscript, sheet music',\\\n",
-    "'medal', 'coin', 'label/sign',\\\n",
-    "'poster','plan','notes', 'document', 'certificate',\\\n",
-    "'graphics', 'drawing', 'design/drawing/sketch','caricature','slide',\\\n",
-    "'archaeological find',\\\n",
-    "'photo', 'photo negative', 'photographic negative, photographic negative', 'photographic material','digital image'\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,25 +85,28 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# combine models via hard voting\n"
+    "# combine models via class-probability combination (soft-voting)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "# is the full ds used for submission?\n",
-    "full = True"
+    "full = True\n",
+    "# submit to \n",
+    "sub_name = 'class_adding_best_kaggle.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -145,17 +120,17 @@
    ],
    "source": [
     "#define models to be used for testing use 03 for submission use full\n",
-    "\n",
+    "import pickle\n",
     "xgb = XGBClassifier()\n",
-    "# 'models/xg/xgboost_full.json' 'models/xg/xgboost_0.3.json' 'models/xg/full_smote100.json' 'models/xg/03_smote100.json'\n",
-    "xgb.load_model('models/xg/03_smote100.json')\n",
+    "# 'models/xg/xgboost_full.json' 'models/xg/xgboost_03.json' 'models/xg/full_smote100.json' 'models/xg/03_smote100.json'\n",
+    "xgb.load_model('models/xg/full_smote100.json')\n",
     "\n",
     "# './models/rf/train_prep_03' './models/rf/train_prep_full' './models/rf/train_prep_03_best' './models/rf/train_prep_full_best' './models/rf/smote_full_best' './models/rf/smote_03_best\n",
-    "rf = pickle.load(open('./models/rf/train_prep_03' , 'rb'))\n",
+    "rf = pickle.load(open('./models/rf/train_prep_full_best' , 'rb'))\n",
     "\n",
     "boost_emb = XGBClassifier()\n",
-    "# 'models/nlp/xgboost_full.json' 'models/nlp/xgboost_0.3.json'\n",
-    "boost_emb.load_model('models/nlp/xgboost_0.3.json')\n",
+    "# 'models/nlp/xgboost_full.json' 'models/nlp/xgboost_03.json'\n",
+    "boost_emb.load_model('models/nlp/xgboost_full.json')\n",
     "\n",
     "nn = TabNetClassifier()\n",
     "nn.load_model('models/nn/first_try.zip')"
@@ -163,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,19 +167,53 @@
     "results.set_index('id', inplace=True)\n",
     "if not full: results['type'] = y_test\n",
     "\n",
-    "results['rf'] = rf.predict(X_test)\n",
+    "#results['rf'] = rf.predict(X_test)\n",
     "results['nn'] = nn.predict(X_test.values)\n",
-    "results['xg'] = xgb.predict(X_test)\n",
+    "#results['xg'] = xgb.predict_proba(X_test)\n",
     "\n",
     "results['filter'] = [-1] * len(results)\n",
     "results['indi'] = [-1] * len(results)\n",
     "results['save'] = [-1] * len(results)\n",
-    "results['emb'] = [-1] * len(results)"
+    "results['emb'] = [[-1]] * len(results)\n",
+    "\n",
+    "\n",
+    "results['xg'] = [[-1]] * len(results)\n",
+    "results['rf'] = [[-1]] * len(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_27626/1817881700.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  results['xg'].iloc[i] = np.array(item)\n",
+      "/tmp/ipykernel_27626/1817881700.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  results['rf'].iloc[i] = np.array(item)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,item in enumerate(xgb.predict_proba(X_test)):\n",
+    "    results['xg'].iloc[i] = np.array(item)\n",
+    "\n",
+    "for i,item in enumerate(rf.predict_proba(X_test)):\n",
+    "    results['rf'].iloc[i] = np.array(item)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,12 +222,23 @@
     "features = list(text.curie_similarity.values)\n",
     "labels = text.type\n",
     "\n",
-    "text['pred'] = boost_emb.predict(features)"
+    "#text['pred'] = boost_emb.predict_proba(features)\n",
+    "text['pred'] = [[-1]] * len(features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,item in enumerate(boost_emb.predict_proba(features)):\n",
+    "    text['pred'].iloc[i] = np.array(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,10 +252,10 @@
     "\n",
     "for index, item in text.iterrows():\n",
     "        if index in results.index:\n",
-    "            results.loc[index].filter = item['filter']\n",
-    "            results.loc[index].indi = item['indicating']\n",
-    "            results.loc[index].save = item['save']\n",
-    "            results.loc[index].emb = item['pred']"
+    "            results.at[index, 'filter'] = item['filter']\n",
+    "            results.at[index, 'indi'] = item['indicating']\n",
+    "            results.at[index, 'save'] = item['save']\n",
+    "            results.at[index, 'emb'] = item['pred']"
    ]
   },
   {
@@ -247,33 +267,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from previous approach for hard voting on predicted classes\n",
+    "\"\"\"\n",
     "from statistics import mode\n",
     "def vote(predictions):\n",
     "    if predictions[0] != -1:\n",
     "        return predictions[0]\n",
     "    if -1 in predictions: predictions.remove(-1)\n",
-    "    return mode(predictions)"
+    "    return mode(predictions)\n",
+    "\n",
+    "results['prediction'] = results.apply(lambda row: vote([row.save,row.xg,row.rf,row.emb]), axis=1)\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results['prediction'] = results.apply(lambda row: vote([row.save,row.xg,row.rf,row.emb]), axis=1)"
+    "from operator import add\n",
+    "def vote(preds):\n",
+    "    xg = np.array(preds[0])\n",
+    "    emb = np.array(preds[1])\n",
+    "    if emb[0] != -1:\n",
+    "        res = xg + emb\n",
+    "    else:\n",
+    "        res = xg\n",
+    "    return np.argmax(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
+    "results['prediction'] = results.apply(lambda row: vote([row.xg,row.emb]), axis=1)\n",
     "if not full: print(accuracy_score(results.type, results.prediction))"
    ]
   },
@@ -286,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
     "if full:\n",
     "    submission = pd.DataFrame({'id': results.index ,'type': results.prediction})\n",
     "    submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())\n",
-    "    submission.to_csv('submissions/sub_name.csv', index=False)"
+    "    submission.to_csv(f'submissions/{sub_name}', index=False)"
    ]
   }
  ],
