--- a/voter.ipynb
+++ b/voter.ipynb
@@ -242,9 +242,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text['filter'] = text.text_features.apply(filtering)\n",
-    "text['indicating'] = text.text_features.apply(indicating)\n",
-    "text['save'] = text.text_features.apply(save_indicating)\n",
+    "# establish our own rules to determine type from text - eventually not beneficial\n",
+    "text['filter'] = text.text_features.apply(filtering) # check for the type in the text\n",
+    "text['indicating'] = text.text_features.apply(indicating) # check for other often occuring type indicating words\n",
+    "text['save'] = text.text_features.apply(save_indicating) # only check for words that (almost) only occur with a certain type\n",
     "\n",
     "text['filter'] = text['filter'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\n",
     "text['indicating'] = text['indicating'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\n",
