clean whitesp, splitup

--- a/xgboost_tries.ipynb
+++ b/xgboost_tries.ipynb
@@ -13,21 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "from deep_translator import GoogleTranslator\n",
-    "import re \n",
-    "from math import isnan\n",
-    "import wandb\n",
-    "import random\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "pd.set_option(\"display.max_columns\", None)\n",
-    "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_seq_items', None)"
+    "from setup_general import *"
    ]
   },
   {
@@ -47,8 +33,7 @@
     "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
     "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
     "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
-    "low = pd.read_csv('data/prep_low_thres.csv', index_col='id', dtype={'type': str})\n",
-    "high = pd.read_csv('data/prep_high_thres.csv', index_col='id', dtype={'type': str})\n",
+    "\n",
     "smote100_full = pd.read_csv('data/train_prepSMOTE100.csv', dtype={'type': str})"
    ]
   },
@@ -57,21 +42,6 @@
    "metadata": {},
    "source": [
     "# xg boost\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xgboost as xgb\n",
-    "from xgboost import XGBClassifier\n",
-    "# utilities\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
@@ -308,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
