--- a/adding_and_deleting_columns.ipynb
+++ b/adding_and_deleting_columns.ipynb
@@ -9,56 +9,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "87aec43d",
-   "metadata": {},
-   "source": [
-    "## Imports"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "de9c6747",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "pd.set_option(\"display.max_columns\", None)\n",
-    "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_seq_items', None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "32ed1235",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\daria\\AppData\\Local\\Temp\\ipykernel_17612\\1699356385.py:9: DtypeWarning: Columns (226,235) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n"
-     ]
-    }
-   ],
-   "source": [
-    "# dtype={'type': str} prevents being confused with data type for large data sets\n",
-    "train = pd.read_csv('data/train.csv', index_col='id', dtype={'type': str})\n",
-    "test = pd.read_csv('data/test.csv', index_col='id', dtype={'type': str})\n",
-    "train_translated = pd.read_csv('data/train_translated.csv', dtype={'type': str})\n",
-    "test_translated = pd.read_csv('data/test_translated.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data = pd.read_csv('data/combined_data.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data_translated = pd.read_csv('data/combined_data_translated.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})\n",
-    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})"
+    "from setup_general import *"
    ]
   },
   {
