--- a/random_forest_balanced.ipynb
+++ b/random_forest_balanced.ipynb
@@ -1,61 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Imports & Settings\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "from deep_translator import GoogleTranslator\n",
-    "import re \n",
-    "from math import isnan\n",
-    "import wandb\n",
-    "import random\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "import xgboost as xgb\n",
-    "from xgboost import XGBClassifier\n",
-    "# utilities\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "pd.set_option(\"display.max_columns\", None)\n",
-    "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_seq_items', None)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dtype={'type': str} prevents being confused with data type for large data sets\n",
-    "train = pd.read_csv('data/train.csv', index_col='id', dtype={'type': str})\n",
-    "test = pd.read_csv('data/test.csv', index_col='id', dtype={'type': str})\n",
-    "train_translated = pd.read_csv('data/train_translated.csv', dtype={'type': str})\n",
-    "test_translated = pd.read_csv('data/test_translated.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data = pd.read_csv('data/combined_data.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data_translated = pd.read_csv('data/combined_data_translated.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})\n",
-    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
-    "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
-    "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
-    "\n"
+    "from setup_general import *"
    ]
   },
   {
